[gd_scene load_steps=3 format=3 uid="uid://bvqlqf7qkx2wg"]

[ext_resource type="Script" path="res://popups/options_popup.gd" id="1_s8r3q"]
[ext_resource type="Theme" uid="uid://ch0ahyx502rlq" path="res://theme.tres" id="2_x7k9p"]

[node name="OptionsPopup" type="Window"]
initial_position = 2
size = Vector2i(350, 250)
wrap_controls = true
transient = true
exclusive = true
borderless = true
script = ExtResource("1_s8r3q")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(350, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_x7k9p")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "OPTIONS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="BackBtn" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 2